--- a/27-  ~    Title :  iframe attribute     ~.html
+++ b/27-  ~    Title :  iframe attribute     ~.html
@@ -29,22 +29,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: pink;">
+<body style="background-color: grey;">
 
-    <h1 style="color: white;text-align: center; font-size: 45px;">Videos About Life </h1>
+    <h1 style="color: white;text-align: center; font-size: 45px;">Some Videos From YouTube Used in Iframe </h1>
 
     <hr style="height: 10px; background-color: white; border: none;">
-
-    <br>
     <br>
 
-    <iframe width="2530" height="1100" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"  title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"  title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="502.01" height="315" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="502" height="315" src="https://www.youtube.com/embed/S8imJ-3P_j8?si=6_Zskyjr-C5ATaq-"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"    title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f" title="YouTube video player" loading="eager" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <br>
     <br>
@@ -52,13 +49,64 @@
     <br>
     <br>
 
-    <iframe width="2530" height="1100" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="503" height="315" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="502" height="315" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="502" height="315" src="https://www.youtube.com/embed/S8imJ-3P_j8?si=6_Zskyjr-C5ATaq-"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br>
+    <br>
+    <hr style="height: 10px; background-color: white; border: none;">
+    <br>
+    <br>
+
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br>
+    <br>
+    <hr style="height: 10px; background-color: white; border: none;">
+    <br>
+    <br>
+
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br>
+    <br>
+    <hr style="height: 10px; background-color: white; border: none;">
+    <br>
+    <br>
+
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <br>
+    <br>
+    <hr style="height: 10px; background-color: white; border: none;">
+    <br>
+    <br>
+
+    <iframe width="100%" height="800" src="https://www.youtube.com/embed/mPZkdNFkNps?si=ejxMfIPEXhpe7CQC" title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/7kN_DF_NJGQ?si=2nPl1KX6jL1zJRj5"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RSxEnxsf3o8?si=goX4oz7oZ8jwZjop"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/i3I9qRMc6Nk?si=A3ea5196tJBuiMIj"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="24.7%" height="300" src="https://www.youtube.com/embed/RlHRwuVVJqc?si=i5_CQnJO9-f2nE_f"   title="YouTube video player" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 </body>
