--- a/28-  ~  Title :   Using the srcdoc Attribute with < iframe >    ~.html
+++ b/28-  ~  Title :   Using the srcdoc Attribute with < iframe >    ~.html
@@ -1,3 +1,22 @@
+
+<!-- 
+
+                    ~  Title :  srcdoc attribute in iframe tag.   ~
+
+
+        • The srcdoc attribute of the <iframe> element
+        offers a powerful way to embed inline HTML
+        content directly within an <iframe>, bypassing
+        the need to link to external pages via the src
+        attribute.
+        • This lesson explores the use, benefits, and
+        practical applications of the srcdoc attribute.
+
+-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
