--- a/30-  ~ Title :  Open in new link in new Tab ~.html
+++ b/30-  ~ Title :  Open in new link in new Tab ~.html
@@ -1,12 +1,23 @@
 <!-- 
  
-            Title : Open link in new window.
+                                      Title : Open link in new window.
 
 
 
+                                    * Open Page in a New Browser Tab *
 
-        if we wnat to opne a link using the a Tag in a new window/Tab we need to set in the attribute target="_blank".
-        if we did target="_self" or we did not do it at all the default is target="_self"
+
+        The target="_blank" attribute in an HTML <a> tag instructs the browser to open the linked document
+        in a new browser tab or window.
+
+        This is particularly useful for external links or references where you want to keep your page open
+        while giving users the opportunity to view linked content simultaneously.
+
+        Using target="_blank" enhances user experience by facilitating multitasking and keeping users on your site,
+        but it should be used judiciously to avoid excessive browser window or tab clutter.
+
+            
+
 
 -->
 
